# cashtime-concierge

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml
concierge/: agent.py  grounding.py  http_client.py  observability.py  pipeline.py  prompts.py  server.py  settings.py
concierge/agents/: __init__.py  matching.py  outreach.py  planner.py  research.py
concierge/data/: creator_sample.json  taxonomy_corpus.json
concierge/tools/: __init__.py  aibmo.py  aibmr.py  aicrops.py  aimm.py  cren.py  twenty.py
deploy/: cloudbuild.ui.yaml  cloudbuild.yaml  deploy.sh  iap_setup.md  provision_grounding.sh  provision_vertex_search.sh
docs/: architecture.html  architecture.md  compliance_audit.md  demo_script.md  devpost_submission.md  judges_access.md
tests/: test_demo_pipeline.py  test_pipeline.py
ui/: .gcloudignore  Dockerfile  next.config.mjs  package-lock.json  package.json
ui/app/: globals.css  layout.js  page.js
ui/app/api/config/: route.js
