[project]
name = "cashtime-concierge"
version = "0.1.0"
description = "CashTime Brand Concierge - ADK agent that turns a brand brief into a working creator outreach pipeline (Google for Startups AI Agents Challenge submission)"
requires-python = ">=3.11"
license = { text = "Proprietary - CashTime Pay AG" }
authors = [{ name = "CashTime Pay AG", email = "dmitry@cashtimepay.com" }]
dependencies = [
    "google-adk>=0.6.0",
    "google-cloud-aiplatform>=1.71.0",
    "google-cloud-discoveryengine>=0.13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-gcp-trace>=1.7.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
concierge-server = "concierge.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["concierge*"]

[tool.setuptools.package-data]
concierge = ["data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# E501: line length handled by formatter. RUF001-003: the codebase intentionally
# uses typographic characters (en-dash, ×, →) in agent prompts and UI copy.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
